# webrtc-p2p-example

./: package.json
multiple/client/: package.json
multiple/frontend/: package.json
multiple/frontend/src/: main.ts  p2p.ts
multiple/server/: Cargo.toml
multiple/server/src/: main.rs  room.rs  websocket.rs
single-tab/: package.json
single-tab/src/: p2p.ts
src/: main.ts  p2p.ts
