[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }